2007-09-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-nytimes.el (shimbun-clear-contents): Remove useless timesselect
	stuff.

2007-09-25  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun.el (shimbun-end-of-tag): Rewrite.

	* sb-tdiary.el (shimbun-make-contents): Use mapc instead of mapcar.

2007-09-24  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun.el (shimbun-decode-entities-string): Define as an alias
	instead of a function using `shimbun-decode-entities'.

	* sb-atom-hash.el (shimbun-hash-update-items-impl): Use
	`shimbun-decode-entities-string' instead of `shimbun-decode-entities'.

	* sb-mailman.el (shimbun-mailman-headers): Call `shimbun-remove-markup'
	before calling `shimbun-decode-entities', in order to keep encoded
	markups.

2007-09-24  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-nytimes.el (shimbun-article): Remove workaround.

2007-09-22  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* sb-atmarkit.el (shimbun-get-headers): New method to process
	redirections of URLs given by RSS feeds.

2007-09-21  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-nytimes.el (shimbun-nytimes-content-start)
	(shimbun-nytimes-content-end): Abolish.
	(shimbun-nytimes-group-table): Remove additional.multimedia group.
	(shimbun-clear-contents): Don't use parent function to extract article
	contents; don't miss headline image and caption; remove useless things
	further; add page delimiters.
	(shimbun-get-headers): Show the group name in the From header.

	* shimbun.el (shimbun-end-of-tag): New function.

2007-09-20  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-nytimes.el: New file.

	* shimbun.el (shimbun-newspaper): New class.

2007-09-19  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-yomiuri.el (shimbun-clear-contents): Break long lines.

2007-09-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-asahi.el (shimbun-asahi-group-table): Use generic urls for book
	and rss groups.

2007-09-03  Katsumi Yamaoka  <yamaoka@jpl.org>
