@@ -1,3 +1,7 @@
+2007-09-26  Hideyuki SHIRAI  <shirai@meadowy.org>
+
+	* mew-shimbun.el (mew-shimbun-goto-folder): Use mapc instead of mapcar.
+
 2007-09-26  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* sb-nytimes.el (shimbun-clear-contents): Remove useless timesselect
